crates/ftui-core/tests/compile_fail/raw_cannot_enter_raw.stderr
error[E0599]: no method named `enter_raw` found for struct `ftui_core::mode_typestate::TerminalMode<1>` in the current scope
 --> tests/compile_fail/raw_cannot_enter_raw.rs:6:9
  |
6 |     raw.enter_raw();
  |         ^^^^^^^^^ method not found in `ftui_core::mode_typestate::TerminalMode<1>`
  |
  = note: the method was found for
          - `ftui_core::mode_typestate::TerminalMode<ftui_core::::mode_typestate::{impl#4}::{constant#0}>`
